package prod.udntk.interfaces;

public interface Scientist {
    void explore();
}
