package prod.udntk.interfaces;

public interface Transport {
    void startEngine();
    void stopEngine();
}
